--- a/WebGL Builds/index.html
+++ b/WebGL Builds/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/New New Build.loader.js";
+      var loaderUrl = buildUrl + "/WebGL Builds.loader.js";
       var config = {
-        dataUrl: buildUrl + "/New New Build.data",
-        frameworkUrl: buildUrl + "/New New Build.framework.js",
-        codeUrl: buildUrl + "/New New Build.wasm",
+        dataUrl: buildUrl + "/WebGL Builds.data.unityweb",
+        frameworkUrl: buildUrl + "/WebGL Builds.framework.js.unityweb",
+        codeUrl: buildUrl + "/WebGL Builds.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Essentials 3D Project",
